leadership modal images fix, got rid of overflow

--- a/style.css
+++ b/style.css
@@ -402,6 +402,14 @@ a:hover, a:focus, a:active {
 .w-100 {
   width: 100%;
 }
+
+.w-50 {
+  width: 50%;
+}
+
+.w-60 {
+  width: 60%;
+}
 /* =============================================================================
   Layout
 ========================================================================== */
@@ -708,6 +716,7 @@ a:hover, a:focus, a:active {
 /* modal for team members
 ========================*/
 .modal {
+
   display: none;
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -715,7 +724,7 @@ a:hover, a:focus, a:active {
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  overflow: hidden; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
